# game-engine

./: .gitignore  CMakeLists.txt
include/: animation.hpp  asset_manager.hpp  audio_manager.hpp  corpse.hpp  entity.hpp  entity_manager.hpp  game.hpp  game_manager.hpp  game_state.hpp  player.hpp  scene.hpp  services.hpp  tile_map.hpp
src/: animation.cpp  asset_manager.cpp  audio_manager.cpp  corpse.cpp  game.cpp  main.cpp  player.cpp  scene_game_screen.cpp
